test/files/pos/t2795.scala
trait Element[T]

trait Transform { 
  type T <: Element[T]

  def processBlock = new Array[T](1)
}
